--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-auth-template",
-  "homepage": "https://<USERNAME>.github.io/<REPO NAME>",
+  "name": "bank-sim-client",
+  "homepage": "https://kkorrapaty.github.io/bank-sim-client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
